--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,133 @@
-.App {
-  text-align: center;
+body {
+  background-color: #161d2e;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.right {
+  padding-top: 40px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+span {
+  font-weight: 400;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.left img {
+  margin-top: 50px;
+  width: 140px;
+  border-radius: 70px;
+}
+.left h1 {
+  text-align: center;
+  color: white;
+  font-size: 25px;
+  font-weight: 400;
+  width: 180px;
+}
+.right h3 {
+  margin-top: 40px;
+}
+table {
+  padding: 15px;
+  border-spacing: 6px;
+}
+.th1 {
+  padding-left: 30px;
+}
+.th2 {
+  padding-left: 60px;
+}
+.th3 {
+  padding-left: 60px;
+}
+.td1 {
+  padding-left: 30px;
+}
+.td2 {
+  padding-left: 60px;
+}
+.td3 {
+  padding-left: 60px;
+}
+.left h3 {
+  color: #3477f6;
+  font-size: 18px;
+  font-weight: 400;
+}
+.sub-right {
+  color: white;
+  background-color: #161d2e;
+  border-radius: 10px;
+  margin: 40px;
+  height: 90px;
+}
+.App {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.top {
+  box-shadow: 2px 2px 10px 10px #0e111768;
+  border-radius: 10px;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  margin-top: 100px;
+  width: 800px;
+  height: 80px;
+  background-color: #202a45;
+  border: none;
+}
+.nav {
+  display: flex;
+  background-color: #0e131f;
+  width: 100%;
+  height: 75px;
+}
+.nav h2 {
+  color: white;
+  font-weight: 500;
+  padding-left: 10px;
+}
+button {
+  margin-top: 25px;
+  color: #fff;
+  font-size: medium;
+  height: 30px;
+  width: 85px;
+  background-color: #3477f6;
+  border: none;
+  border-radius: 10px;
+  margin-left: 20px;
+}
+.nav img {
+  border-radius: 35px;
+  margin-left: 10px;
+  margin-top: 7px;
+  width: 50px;
+  height: 50px;
+}
+input {
+  font-size: medium;
+  color: #3477f6;
+  outline: none;
+  padding-left: 10px;
+  width: 620px;
+  height: 30px;
+  border: none;
+  /* border: 1px solid #996ae7; */
+  border-radius: 10px;
+  background-color: #202a45;
+}
+.sub {
+  box-shadow: 2px 2px 10px 10px #0e111768;
+  display: grid;
+  grid-template-columns: 2fr 3.5fr;
+  border: none;
+  border-radius: 10px;
+  width: 800px;
+  height: 330px;
+  margin-top: 50px;
+  background-color: #202a45;
+}
+.top h1 {
+  color: #996ae7;
 }
