--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ body {
   background-color: #161d2e;
 }
 .right {
-  padding-top: 40px;
+  padding-top: 30px;
   color: white;
 }
 
@@ -22,7 +22,7 @@ span {
   width: 180px;
 }
 .right h3 {
-  margin-top: 40px;
+  margin-top: 10px;
 }
 table {
   padding: 15px;
@@ -58,6 +58,13 @@ table {
   margin: 40px;
   height: 90px;
 }
+.img-d {
+  background-color: #0e1117;
+  width: 580px;
+  border-radius: 30px;
+  height: 450px;
+  padding-top: 20px;
+}
 .App {
   display: flex;
   align-items: center;
@@ -71,7 +78,7 @@ table {
   text-align: center;
   justify-content: center;
   margin-top: 100px;
-  width: 800px;
+  width: 1100px;
   height: 80px;
   background-color: #202a45;
   border: none;
@@ -91,8 +98,8 @@ button {
   margin-top: 25px;
   color: #fff;
   font-size: medium;
-  height: 30px;
-  width: 85px;
+  height: 35px;
+  width: 95px;
   background-color: #3477f6;
   border: none;
   border-radius: 10px;
@@ -110,7 +117,7 @@ input {
   color: #3477f6;
   outline: none;
   padding-left: 10px;
-  width: 620px;
+  width: 820px;
   height: 30px;
   border: none;
   /* border: 1px solid #996ae7; */
@@ -123,8 +130,8 @@ input {
   grid-template-columns: 2fr 3.5fr;
   border: none;
   border-radius: 10px;
-  width: 800px;
-  height: 330px;
+  width: 1100px;
+  height: 530px;
   margin-top: 50px;
   background-color: #202a45;
 }
